# AgentML-Project

./: .gitignore  README.md  analysis.ipynb  code_understanding.md  prepare.py  prepare_if_only_when_required.py  program.md  pyproject.toml  run_experiment.py  select_model.py  train.py
.claude/: settings.local.json
.github/workflows/: claude-code.yml
src/: prepare.py  run_experiment.py  select_model.py  train.py
src/visualization/: analysis.ipynb
