[project]
name = "agentml"
version = "0.1.0"
description = "Autonomous ML experimentation loop inspired by Karpathy's autoresearch"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "imbalanced-learn>=0.12",
    "mlflow>=2.10",
    "pandas>=2.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "pyyaml>=6.0",
    "joblib>=1.3",
    "ipykernel>=6.0",
    "nbformat>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
